--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Theme URI: https://github.com/kevinbazira/algori-blogger
 Author: Kevin Bazira  
 Author URI: http://kevinbazira.com/
 Description: A Gutenberg Ready Free Modern Personal Blog WordPress Theme with a clean and professional design that will be a great solution for sharing your creative vision, spreading your ideas, and creating a resource for others.
-Version: 1.1.7
+Version: 1.1.8
 License: GNU General Public License v3 or later
 License URI: https://www.gnu.org/licenses/gpl-3.0.en.html
 Text Domain: algori-blogger
@@ -1694,8 +1694,14 @@ hr {
 .hero-btn{
   /*font-style:italic;*/
 }
-
-
+@media all and (max-width: 768px) { 
+	.header-hero {
+		min-height: 0px;
+	}
+	.hero-info {
+		padding: 10% 10% 0% 10%;
+	}
+}
 @media all and (max-width: 480px) { 
 	.hero-description {
 		display: none;
